# gen3lite_moveit2

./: CMakeLists.txt  package.xml
src/: end_effector_moveit.cpp  kinova_moveit_openvla.cpp  kinova_moveit_openvla_endeffector_sim.cpp  kinova_moveit_openvla_sim.cpp  kinova_moveit_test.cpp  kinova_no_moveit_openvla.cpp  openvla_test.cpp
